改网页端链接

--- a/assets/frpc/static/index.html
+++ b/assets/frpc/static/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>frp client</title>
-  <script type="module" crossorigin src="./index-BafKJGer.js"></script>
+  <script type="module" crossorigin src="./index-C86zt_ay.js"></script>
   <link rel="stylesheet" crossorigin href="./index-BBAwZRvt.css">
 </head>
 
