--- a/assets/frps/static/index.html
+++ b/assets/frps/static/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>frp server</title>
-  <script type="module" crossorigin src="./index-BzXvVrgG.js"></script>
+  <script type="module" crossorigin src="./index-BXo8u6wD.js"></script>
   <link rel="stylesheet" crossorigin href="./index-ohlmL_QO.css">
 </head>
 
